# vla-factory

./: .gitignore  LICENSE  README.cn.md  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/adapt-new-vla-model/: SKILL.md
docs/architecture/: architecture-text.md  vla-factory-architecture.cn.md  vla-factory-architecture.md
docs/architecture/cn/: vla-factory-architecture.cn.md
docs/graph/: architecture-text.md
docs/modules/: data-module.cn.md  data-module.md
docs/tutorial/: robotwin.cn.md  robotwin.md
examples/: act_lekiwi.yaml  act_robotwin.yaml  pi0_lora.yaml  reference.yaml
scripts/: install.sh
test/: test_act_model.py  test_base_contract.py  test_data_pipeline.py  test_inference_engine.py  test_lora_strategy.py  test_phase4_engine.py  test_pi05_model.py  test_pi0_model.py  test_protocols_registry_config.py  test_robotwin_reader.py  test_robotwin_server.py
test/data/lerobot_train_data_3_episodes/data/chunk-000/: file-000.parquet
test/data/lerobot_train_data_3_episodes/meta/: info.json  replay_init_states.jsonl  stats.json  tasks.parquet
test/data/lerobot_train_data_3_episodes/meta/episodes/chunk-000/: file-000.parquet
test/data/lerobot_train_data_3_episodes/meta/replay_frame_states/: episode_000000.npz  episode_000001.npz  episode_000002.npz
vla_factory/: __init__.py  __main__.py  cli.py
vla_factory/config/: __init__.py  defaults.py  parser.py  recipe.py
vla_factory/config/model/: act.yaml  pi0.yaml  pi05.yaml
vla_factory/data/: __init__.py  dataset.py  loader.py  manifest.py
vla_factory/data/codec/: __init__.py  base.py  hdf5_jpeg.py  pyav.py
vla_factory/data/formats/: __init__.py  base.py  lerobot_v3.py  robotwin.py
vla_factory/data/sampling/: __init__.py  sampler.py
vla_factory/data/transforms/: __init__.py  base.py  images.py  normalize.py  pad_dimensions.py  pipeline.py  registry.py  resize_images.py  task_tokenize.py
vla_factory/deploy/: adapters.py  infer.py  lerobot_host_adapter.py  robotwin_adapter.py  robotwin_connector.py  robotwin_server.py  transport.py  zmq_client.py
vla_factory/deploy/configs/: robotwin.yml
vla_factory/model/: base_contract.py
vla_factory/model/protocols/: __init__.py  model.py  observation.py
vla_factory/model/registry/: __init__.py  registry.py
vla_factory/model/registry/entries/: act.py  pi0.py  pi05.py
vla_factory/training/: __init__.py  pytorch_trainer.py  train.py
vla_factory/training/strategies/: __init__.py  full.py  lora.py
vla_factory/utils/: __init__.py  constants.py  format.py
