[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vla-factory"
version = "0.1.0"
description = "A recipe-driven fine-tuning framework for robot Vision-Language-Action (VLA) models."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "VLA Factory Contributors" },
]
keywords = [
    "robotics",
    "vla",
    "vision-language-action",
    "fine-tuning",
    "lerobot",
    "act",
    "imitation-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # torch upper bound aligns with lerobot to avoid a downgrade on [act] install.
    "torch>=2.7,<2.11.0",
    "torchvision>=0.22.0,<0.26.0",
    "numpy>=1.24",
    "transformers>=4.40",
    # LoRA / adapter fine-tuning (framework-level strategy, available by default).
    "peft>=0.11",
    "pyyaml>=6.0",
    "av>=12.0",
    "pyzmq>=25.0",
    "safetensors>=0.4",
    # Config: model-default profile merge + dot-path/interpolation (Hydra base, no runtime).
    "omegaconf>=2.3",
    # Image resize (ResizeImages transform) + lerobot-host JPEG decode.
    "opencv-python-headless>=4.5",
    # LeRobot v3 parquet parsing.
    "pandas>=2.0",
    "pyarrow>=14.0",
    # Preprocessing progress bar.
    "tqdm>=4.60",
]

[project.scripts]
vlafactory-cli = "vla_factory.cli:main"

[project.optional-dependencies]
# Per-model ecosystem deps. ACT wraps lerobot's ACTPolicy (standard PyPI, pip-friendly).
act = ["lerobot>=0.5"]
# pi0/pi05 use openpi's native PI0Pytorch (jax + pytorch). openpi is pinned to a
# known-good commit for reproducibility. It also imports pytest at runtime
# (gemma_pytorch.py), so pytest is listed here even though it's a test dep.
# NOTE: `pip install -e ".[pi0]"` does NOT work — openpi's strict pins + the
# in-place transformers patch require the uv installer: `bash scripts/install.sh pi0`.
pi0 = [
    "openpi @ git+https://github.com/Physical-Intelligence/openpi@15a9616a00943ada6c20a0f158e3adb39df2ccac",
    "pytest>=7",
]
pi05 = [
    "openpi @ git+https://github.com/Physical-Intelligence/openpi@15a9616a00943ada6c20a0f158e3adb39df2ccac",
    "pytest>=7",
]
# RoboTwin native hdf5 datasets (episode*.hdf5 with embedded JPEG streams).
# Only h5py is needed to read the data; the RoboTwin simulator itself runs in
# its own environment and is not a dependency of the framework.
robotwin = ["h5py>=3.0"]
all = [
    "lerobot>=0.5",
    "openpi @ git+https://github.com/Physical-Intelligence/openpi@15a9616a00943ada6c20a0f158e3adb39df2ccac",
    "h5py>=3.0",
    "pytest>=7",
]
dev = [
    "pytest>=7",
    "pytest-cov",
    "tensorboard>=2.14",
]

# uv: route torch/torchvision through the PyTorch CUDA wheel index. The
# installer (scripts/install.sh) auto-selects cu126/cu128 from the local driver.
[tool.uv]
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[project.urls]
Homepage = "https://gitcode.com/openeuler/vla-factory"
Repository = "https://gitcode.com/openeuler/vla-factory"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["vla_factory*"]

# Ship model default profiles (act.yaml, pi0.yaml, ...) with the package.
[tool.setuptools.package-data]
"vla_factory.config.model" = ["*.yaml"]

# Collect only the repo test suite (a bare `pytest` must not pick up unrelated
# local directories such as vendored skills or datasets).
[tool.pytest.ini_options]
testpaths = ["test"]
